# autopulsed

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.cargo/: config.toml
.githooks/: README.md  pre-commit
.github/workflows/: ci.yml
src/: config.rs  main.rs  state.rs
tests/: integration_test.rs
tests/helpers/: mod.rs
