# autopulsed - A daemon for configuring PulseAudio automatically
# Copyright (C) 2025  Flokart World, Inc.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "autopulsed"
version = "0.1.0"
edition = "2024"
authors = ["Shintaro Sakahara <skhrshin@flokart.world>"]
description = "A daemon for configuring PulseAudio automatically"
license = "AGPL-3.0"

[[bin]]
name = "autopulsed"
path = "src/main.rs"

[dependencies]
libpulse-binding = "2.28"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.20.0"
